# snark

./: .gitignore  CMakeLists.txt  dependencies.commits
actuators/quickset/ptcr/: protocol.cpp
batteries/ocean/: stdio_query.cpp
etc/bash_completion.d/: snark
graph/: traits.h
graphics/applications/: csv-plot.cpp  snark-graphics-test-pattern.cpp  view-points.cpp
graphics/applications/csv_plot/: stream.cpp
graphics/applications/view_points/: main_window.cpp
imaging/applications/: cv-calc.cpp  cv-cat.cpp  image-accumulate.cpp  image-from-csv.cpp  image-pinhole-calibrate.cpp
imaging/camera/: pinhole.cpp
imaging/color/: convert.cpp
imaging/cv_mat/: bursty_pipeline.h  filters.cpp  pipeline.cpp  pipeline.h
imaging/cv_mat/detail/: accumulated.cpp  bitwise.cpp  file.cpp  ratio.h  utils.cpp
imaging/examples/: regionprops-demo.cpp
imaging/test/filters/bitwise/: bitwise_test.cpp
imaging/vegetation/: filters.cpp
math/gaussian_process/test/: gaussian_process_test.cpp
math/test/: frame_transforms_test.cpp  rotation_matrix_test.cpp
point_cloud/applications/: points-calc.cpp  points-foreground-partitions.cpp  points-join.cpp  points-rays.cpp  points-to-partitions.cpp  points-to-voxels.cpp
python/: CMakeLists.txt
python/snark/ros/: convert.py
render/svg/applications/: csv-to-svg.cpp
ros/: file-util.cpp
ros/applications/: CMakeLists.txt  points-from-ros.cpp  points-to-ros.cpp  ros-bag-to-bin  ros-from-csv  ros-image.cpp  ros-multi-array.cpp  ros-to-csv  ros-to-image
ros/applications/test/ros-from-csv/: test
ros/applications/test/ros-to-csv/: test
sensors/cameras/basler/applications/: basler-cat.cpp
sensors/cameras/flycapture/applications/: flycapture-callback.cpp  flycapture-multicam.cpp
sensors/cameras/gige/applications/: gige-callback.cpp
sensors/cameras/realsense2/applications/: CMakeLists.txt  realsense2-cat.cpp
sensors/cameras/vimba/: camera.cpp
sensors/cameras/vimba/applications/: vimba-cat.cpp
sensors/lidars/: CMakeLists.txt
sensors/lidars/ouster/: CMakeLists.txt  os1.cpp
sensors/lidars/ouster/applications/: CMakeLists.txt  ouster-cat  ouster-help  ouster-view  ouster-view.cpp
sensors/lidars/ouster/applications/ouster_view/: viz.cpp  viz.h
sensors/lidars/ouster/examples/: ouster-stats  view
sensors/lidars/velodyne/applications/: velodyne-to-csv.cpp
tbb/: bursty_reader.h
(+13 files in other folders)
